// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Container matches snapshot 1`] = `
.c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    for="test-id"
    id="test-id_label"
  >
    test label
  </label>
  Children
</div>
`;

exports[`Field Container should have invalid styles given valid prop is set to false 1`] = `
.c3 {
  color: #CD2C23;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: var(--spacing-base);
}

.c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #CD2C23;
}

.c0:focus {
  border-color: #CD2C23;
}

.c0 > :nth-child(2) {
  margin-bottom: var(--spacing-half);
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    for="test-id"
    id="test-id_label"
  >
    test label
  </label>
  <span
    aria-live="polite"
    class="c3"
    data-testid="invalid-field"
    id="test-id_invalid"
    role="alert"
  >
    <svg
      class="c4"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
    This text area input is invalid
  </span>
  Children
</div>
`;

exports[`Field Container should not have margins given noMargin prop is set to true 1`] = `
.c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0;
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    for="test-id"
    id="test-id_label"
  >
    test label
  </label>
  Children
</div>
`;
